--- a/contact.html
+++ b/contact.html
@@ -90,27 +90,27 @@
 
         <div class="links">
             <li>
-                <i class="bi bi-facebook"></i>
+                <i class="bi bi-facebook" id="one"></i>
                 <a href="www.facebook.com"><p>Facebook</p></a>
             </li>
 
             <li>
-                <i class="bi bi-twitter"></i>
+                <i class="bi bi-twitter" id="two"></i>
                 <a href="www.twitter.com"><p>Twitter</p></a>
             </li>
 
             <li>
-                <i class="bi bi-instagram"></i>
+                <i class="bi bi-instagram" id="three"></i>
                 <a href="www.instagram.com"><p>Instagram</p></a>
             </li>
 
             <li>
-                <i class="bi bi-github"></i>
+                <i class="bi bi-github" id="four"></i>
                 <a href="www.github.com"><p>Github</p></a>
             </li>
 
             <li>
-                <i class="bi bi-linkedin"></i>
+                <i class="bi bi-linkedin" id="five"></i>
                 <a href="www.linkedin.com"><p>LinkedIn</p></a>
             </li>
         </div>
