--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
     <div class="service_display">
         <div class="icon">
-            <i class="bi bi-truck"></i>
+            <i class="bi bi-laptop"></i>
             <h3>Online Order</h3>
         </div>
         <div class="icon">
@@ -62,7 +62,7 @@
             <h3>Online Support</h3>
         </div>
         <div class="icon">
-            <i class="bi bi-telephone-fill"></i>
+            <i class="bi bi-buildings"></i>
             <h3>Promotions</h3>
         </div>
         <div class="icon">
