--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
          <input type="text" placeholder="Your First Name">
          <input type="text" placeholder="Your Last Name">
          <input type="email" placeholder="Your email">
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+        <textarea name="prompt" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
         <button>Submit</button>    
         </form>
 
